syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/Remxin/home-life/server/pb";



message RenewAccessTokenResponse {
    string sessiond_id = 1;
    string access_token = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp access_token_expires_at = 4;
    google.protobuf.Timestamp refresh_token_expires_at = 5;
    optional string permission_token = 6;
}